# marketplace-parser

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
marketplace_parser/: __init__.py  core.py  utils.py
marketplace_parser/marketplaces/: __init__.py  wildberries.py
tests/: test_basic.py
